# galfind

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  README.md  __pyproject.toml  _requirements_old.txt  conftest.py  galfind_config.ini  pre-commit-config.yaml  pyproject.toml  remove_by_eye_local.py  requirements.txt  requirements_old.txt  setup.py  tash info
.github/workflows/: python-app.yml
Aperture_corrections/: NIRCam_aper_corr.txt
NIRCam_pipeline/: calc_NIRCam_aper_corrs.py  calc_UV_properties.py  from_fits.py  mast_query.py  pipeline.py  run_depths.py  simulated_pipeline.py
configs/: EAZY_UVJ.RES  EAZY_UVJ.RES.INFO  galfind_config.ini  galfind_singularity_config.ini  jwst_nircam_FILTER.RES.info
configs/EAZY_templates/: fsps_larson.txt
configs/JWST_R_curves/NIRCam/: generate_grism_resolution.py  nircam_grism_resolution.csv
configs/JWST_R_curves/NIRSpec/: jwst_nirspec_g395h_disp.fits
configs/LePhare/: Photo_z.para  default.para
configs/LePhare/sed/: BC03_Chabrier2003_Z[m42,m52].list  BC03_Chabrier2003_Z[m42,m62].list  BC03_Chabrier2003_Z[m42].list
configs/SExtractor/: default.param  default.sex  nircam.param  test.sex
data/: SMC_Gordon+03.h5  make_SMC_data.py
docs/: conf.py  requirements.txt
docs/pre_built_html/doctrees/: environment.pickle  index.doctree
docs/pre_built_html/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: API.rst  conf.py  index.rst  usage.rst
docs/source/_autosummary/: galfind.rst
docs/source/catalogue/: catalogue.rst  load_catalogue.ipynb  number_density_function.ipynb  plotting.ipynb  selection.ipynb
docs/source/cutouts/: RGB_cutouts.ipynb  cutouts.rst  multiple_cutouts.ipynb  stacking.ipynb
docs/source/data/: PSF_homogenization.ipynb  automasking.ipynb  cataloguing_the_data.ipynb  data.rst  data_intro.ipynb  forced_photometry.ipynb  from_pipeline.ipynb  masking.ipynb  psf_homogenization.ipynb  running_depths.ipynb  segmentation.ipynb  source_extraction.ipynb
docs/source/galaxy/: diagnostic_plots.ipynb  galaxy.rst  selection.ipynb
docs/source/getting_started/: downloading_observational_data.rst  getting_started.rst  installation.rst
docs/source/instrument/: filter.ipynb  instrument.rst  instrument_object.ipynb  multiple_filter.ipynb
docs/source/misc/: PDF.ipynb  misc.rst
docs/source/photometry/: basic_photometry.ipynb  photometry.rst  photometry_rest.ipynb
examples/: ACS_SBC_testing.py  EPOCHS_III_beta_bias_plots.py  UVLF.py  Yggdrasil_inst.ecsv  adding_catalogues.py  align_to_gaia.py  calc_simulated_UV_properties.py  calculate_bpass_colours.py  cat_from_pipes_templates.py  combine_COSMOSWebb.py  combine_NEP.py  completeness_contamination.py  example_phot_class.py  fit_brown_dwarfs.py  galfit_test.py  jag_euclid_deep_sim.ipynb  jaguar_completeness.py  jaguar_completeness_euclid_deep.py  lya_damping_wing.py  lyman_alpha_beta_bias.py  make_RGB.py  make_brown_dwarf_fit_files.py  make_cutouts.py  make_spectral_cat.py  make_symlinks.py  mass_function.py  mock_cat_creator.py  multi_aperture_cat.py  multi_cat_test.py  plot_IGM_grid_slices.py  plot_band_z_wav_coverage.py  plot_dust_attenuation_curves.py  plot_filterset.py  plot_fixed_z_template_Calzetti94_beta.py  plot_lyman_alpha_damping_wing.py  plot_template_set.py  plot_yggdrasil_beta.py  pyautogal.py  run_LePhare.py  run_all_bagpipes.py  (+3 more)
examples/MgII_fesc_paper/: load_spectra.py
examples/reionization_paper/: BPASS_[NII]_Halpha_ratio.py  DJA_Ha+NII_5.5<z<6.5_cat.fits  DJA_Ha+NII_beta_5.5<z<6.5_cat.fits  G395H,55z65.ecsv  G395M,G395H,55z65.ecsv  Halpha_NIRSpec.py  Halpha_template_phot_color_diff.py  JOF_v11_ACS_WFC+NIRCam_F410M-F444W.fits  PRISM,5_6<z<6_5_JOF_v11.fits  compare_Halpha_spectrum_photometry.py  reionization.py  xi_ion_bias.py
galfind/: Automask.py  Bagpipes.py  Brown_Dwarf_Fitter.py  Catalogue.py  Catalogue_Base.py  Catalogue_Creator.py  Cluster_Data.py  Cutout.py  DLA.py  Data.py  Depths.py  Dust_Attenuation.py  EAZY.py  Emission_lines.py  Filter.py  Galaxy.py  IGM_attenuation.py  Instrument.py  LePhare.py  MCMC.py  Masking.py  Morphology.py  Multiple_Catalogue.py  Multiple_Data.py  NIRCam_aperture_corrections.py  NIRCam_reduction.py  Number_Density_Function.py  PDF.py  PSF.py  PSF_homogenization.py  Photometry.py  Photometry_obs.py  Photometry_rest.py  Photutils.py  Property_calculator.py  Rest_frame_properties.py  SED.py  SED_codes.py  SED_fitter.py  SED_result.py  (+24 more)
galfind/Aperture_corrections/: ACS_WFC_aper_corr.txt  MIRI_aper_corr.txt  NIRCam_aper_corr.txt  WFC3_IR_aper_corr.txt  calc_aper_corr.py
galfind/IGM_attenuation/: LS_absorption.fits
galfind/configs/: Photo_z.para  galfind_config.ini  jwst_nircam_FILTER.RES  jwst_nircam_FILTER.RES.info  zphot.param.default  zphot_jwst.translate
galfind/sed_fitting/: EAZY.py
galfind/selection/: __init__.py  completeness.py  contamination.py  grid.py
testing/: example_pipeline.py  make_test_data.py  test_Cat.py  test_Catalogue.py  test_Data.py  test_Filter.py  test_Galaxy.py  test_Instrument.py  test_Photometry.py  test_Properties.py  test_SED.py  test_SED_code.py  test_Selectors.py  test_config.py  test_exceptions.py  test_funcs.py  test_galfind_config.ini
testing/unit_tests/: test_Data.py
tests/: .coverage
unit_testing/: Instrument_test.py  conftest.py  test_Catalogue.py  test_Data.py  test_Instrument.py  test_Photometry.py  test_SED_fitting.py  testing_notebook.ipynb
(+559 files in other folders)
